syntax = "proto3";

package acmelib.v2;

import "acmelib/v2/entity.proto";
import "acmelib/v2/bus.proto";
import "acmelib/v2/canid_builder.proto";
import "acmelib/v2/node.proto";
import "acmelib/v2/signal.proto";
import "acmelib/v2/attribute.proto";

message Network {
    acmelib.v2.Entity entity = 1;

    repeated acmelib.v2.Bus buses = 2;

    repeated acmelib.v2.CANIDBuilder canid_builders = 3;
    repeated acmelib.v2.Node nodes = 4;
    repeated acmelib.v2.SignalType signal_types = 5;
    repeated acmelib.v2.SignalUnit signal_units = 6;
    repeated acmelib.v2.SignalEnum signal_enums = 7;
    repeated acmelib.v2.Attribute attributes = 8;
}