syntax = "proto3";

package acmelib.v2;

import "acmelib/v2/entity.proto";
import "acmelib/v2/attribute.proto";
import "acmelib/v2/message.proto";

message Node {
    acmelib.v2.Entity entity = 1;

    uint32 node_id = 2;
    uint32 interface_count = 3;
    
    repeated acmelib.v2.AttributeAssignment attribute_assignments = 4;
}

message NodeInterface {
    int32 number = 1;
    string node_entity_id = 2;
    repeated acmelib.v2.Message messages = 3;
}